--- a/templates/admin_view_spot.html
+++ b/templates/admin_view_spot.html
@@ -11,7 +11,7 @@
     <div class="sidebar-header">
       <div class="logo">
         <div class="logo-icon">🅿️</div>
-        <span class="logo-text">ParkTech Pro</span>
+        <span class="logo-text">ParkNGo</span>
       </div>
     </div>
     <nav class="nav-menu">
