--- a/templates/user_edit_profile.html
+++ b/templates/user_edit_profile.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Edit Profile - ParkSmart</title>
+  <title>Edit Profile - ParkNGo</title>
   <link rel="stylesheet" href="../static/styles.css" />
 </head>
 
@@ -15,7 +15,7 @@
       <div class="sidebar-header">
         <div class="logo">
           <div class="logo-icon">🅿️</div>
-          <div class="logo-text">ParkSmart</div>
+          <div class="logo-text">ParkNGo</div>
         </div>
       </div>
       <nav class="nav-menu">
