--- a/templates/user_logout.html
+++ b/templates/user_logout.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Logout - ParkSmart</title>
+  <title>Logout - ParkNGo</title>
   <link rel="stylesheet" href="../static/styles.css" />
 </head>
 
@@ -57,7 +57,7 @@
           </div>
 
           <div class="logout-text">
-            <h3>Thanks for using ParkSmart!</h3>
+            <h3>Thanks for using ParkNGo!</h3>
             <p>Your session will be safely terminated. You can always come back anytime.</p>
           </div>
 
